--- a/infra/package.json
+++ b/infra/package.json
@@ -21,8 +21,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.131.0",
     "@aws-cdk/aws-cloudfront": "^1.131.0",
     "@aws-cdk/aws-cloudfront-origins": "^1.131.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.131.0",
     "@aws-cdk/aws-s3": "^1.131.0",
     "@aws-cdk/core": "1.131.0",
     "source-map-support": "^0.5.16"
