--- a/controller/package.json
+++ b/controller/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-joystick-component": "^1.4.0",
     "react-scripts": "4.0.3",
+    "react-use-websocket": "^2.9.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
